unpackaged/main/default/objects/MapaSocial__c/MapaSocial__c.object-meta.xml
<CustomObject>
    <label>Mapa Social</label>
    <nameField>
        <label>Mapa Social del Fraccionamiento</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Mapa Social</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>