unpackaged/main/default/objects/MapaSocial__c/fields/AC__c.field-meta.xml
<CustomField>
    <fullName>AC__c</fullName>
    <label>AC</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>