unpackaged/main/default/objects/MapaSocial__c/fields/Administracion__c.field-meta.xml
<CustomField>
    <fullName>Administracion__c</fullName>
    <label>Administración</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>