unpackaged/main/default/objects/MapaSocial__c/fields/Agua__c.field-meta.xml
<CustomField>
    <fullName>Agua__c</fullName>
    <label>Agua</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>