unpackaged/main/default/objects/MapaSocial__c/fields/Alumbrado__c.field-meta.xml
<CustomField>
    <fullName>Alumbrado__c</fullName>
    <label>Alumbrado</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>