unpackaged/main/default/objects/MapaSocial__c/fields/Basura__c.field-meta.xml
<CustomField>
    <fullName>Basura__c</fullName>
    <label>Basura</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>