unpackaged/main/default/objects/MapaSocial__c/fields/EntregaMunicipio__c.field-meta.xml
<CustomField>
    <fullName>EntregaMunicipio__c</fullName>
    <label>Entrega Municipio</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>