unpackaged/main/default/objects/MapaSocial__c/fields/Escuelas__c.field-meta.xml
<CustomField>
    <fullName>Escuelas__c</fullName>
    <label>Escuelas</label>
    <length>130000</length>
    <type>LongTextArea</type>
</CustomField>