unpackaged/main/default/objects/MapaSocial__c/fields/Fraccionamiento__c.field-meta.xml
<CustomField>
    <fullName>Fraccionamiento__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Fraccionamiento</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Fraccionamiento__c.Activo_frac__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Fraccionamiento__c</referenceTo>
    <relationshipLabel>Mapa Social</relationshipLabel>
    <relationshipName>Mapa_Social</relationshipName>
    <type>Lookup</type>
</CustomField>