unpackaged/main/default/objects/MapaSocial__c/fields/Gas__c.field-meta.xml
<CustomField>
    <fullName>Gas__c</fullName>
    <label>Gas</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>