unpackaged/main/default/objects/MapaSocial__c/fields/HipotecaServicios__c.field-meta.xml
<CustomField>
    <fullName>HipotecaServicios__c</fullName>
    <label>Hipoteca con servicios</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>