unpackaged/main/default/objects/MapaSocial__c/fields/Internte__c.field-meta.xml
<CustomField>
    <fullName>Internte__c</fullName>
    <label>Internte</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>