unpackaged/main/default/objects/MapaSocial__c/fields/Luz__c.field-meta.xml
<CustomField>
    <fullName>Luz__c</fullName>
    <label>Luz</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>