unpackaged/main/default/objects/MapaSocial__c/fields/PorcentajeEntrega__c.field-meta.xml
<CustomField>
    <fullName>PorcentajeEntrega__c</fullName>
    <label>Porcentaje de entrega</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>