unpackaged/main/default/objects/MapaSocial__c/fields/Seguridad__c.field-meta.xml
<CustomField>
    <fullName>Seguridad__c</fullName>
    <label>Seguridad</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>