unpackaged/main/default/objects/MapaSocial__c/fields/Transportes__c.field-meta.xml
<CustomField>
    <fullName>Transportes__c</fullName>
    <label>Transportes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>